--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://github.io/Rakshith-v-patil/",
+  "homepage" : "https://github.io/Rakshith-v-patil/Queue-Club-Snooker-Point",
   "name": "ecommerce",
   "version": "0.1.0",
   "private": true,
